--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <a href="https://instagram.com">Instagram</a>
     </div>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://github.com/Yosef-Ayman">Yosef Ayman</a>.
+      Coded by <a href="https://github.com/Yosef-Ayman" target="_blank">Yosef Ayman</a>.
     </div>
   </main>
 </body>
