--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
   <main>
-    <img src="assets/images/avatar-jessica.jpeg">
-    <h1>Jessica Randall</h1>
-    <div class="location">London, United Kingdom</div>
-    <p>"Front-end developer and avid reader."</p>
+    <img src="assets/images/photo_2025-02-07_00-52-09.jpg">
+    <h1>Yosef Ayman</h1>
+    <div class="location">Giza, Egypt</div>
+    <p>"Front-end developer and FCAI-CU student."</p>
     <div class="links">
-      <a href="https://github.com">GitHub</a>
-      <a href="https://frontendmentor.io">Frontend Mentor</a>
-      <a href="https://www.linkedin.com/">LinkedIn</a>
-      <a href="https://x.com/">Twitter</a>
-      <a href="https://instagram.com">Instagram</a>
+      <a href="https://github.com/Yosef-Ayman" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/yosef-ayman/" target="_blank">LinkedIn</a>
+      <a href="https://www.facebook.com/Yosef.Ayman.0/" target="_blank">Facebook</a>
+      <a href="https://www.instagram.com/yosef__ayman/" target="_blank">Instagram</a>
     </div>
     <div class="attribution">
       Coded by <a href="https://github.com/Yosef-Ayman" target="_blank">Yosef Ayman</a>.
