--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main>
-    <img src="assets/images/photo_2025-02-07_00-52-09.jpg">
+    <img src="assets/images/photo_2025-02-07_00-52-09(2).jpg">
     <h1>Yosef Ayman</h1>
     <div class="location">Giza, Egypt</div>
     <p>"Front-end developer and FCAI-CU student."</p>
