--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/icons8-code-32.png">
   <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | Social links profile</title>
+  <title>Yosef Ayman | Social links profile</title>
 </head>
 <body>
   <main>
@@ -17,6 +17,7 @@
       <a href="https://github.com/Yosef-Ayman" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/yosef-ayman/" target="_blank">LinkedIn</a>
       <a href="https://www.facebook.com/Yosef.Ayman.0/" target="_blank">Facebook</a>
+      <a href="https://www.tiktok.com/@yosef.ayman.0" target="_blank">TikTok</a>
       <a href="https://www.instagram.com/yosef__ayman/" target="_blank">Instagram</a>
     </div>
     <div class="attribution">
