--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/icons8-code-32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <title>Yosef Ayman | Social links profile</title>
+  <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
   <main>
-    <img src="assets/images/photo_2025-02-07_00-52-09(2).jpg">
-    <h1>Yosef Ayman</h1>
-    <div class="location">Giza, Egypt</div>
-    <p>"Front-end developer and FCAI-CU student."</p>
+    <img src="assets/images/avatar-jessica.jpeg">
+    <div class="name">Jessica Randall</div>
+    <div class="location">London, United Kingdom</div>
+    <p>"Front-end developer and avid reader."</p>
     <div class="links">
-      <a href="https://github.com/Yosef-Ayman" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/yosef-ayman/" target="_blank">LinkedIn</a>
-      <a href="https://www.facebook.com/Yosef.Ayman.0/" target="_blank">Facebook</a>
-      <a href="https://www.tiktok.com/@yosef.ayman.0" target="_blank">TikTok</a>
-      <a href="https://www.instagram.com/yosef__ayman/" target="_blank">Instagram</a>
+      <a href="https://github.com" target="_blank">GitHub</a>
+      <a href="https://frontendmentor.io" target="_blank">Frontend Mentor</a>
+      <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+      <a href="https://x.com/" target="_blank">Twitter</a>
+      <a href="https://instagram.com" target="_blank">Instagram</a>
     </div>
     <div class="attribution">
       Coded by <a href="https://github.com/Yosef-Ayman" target="_blank">Yosef Ayman</a>.
